--- a/front-end/index.html
+++ b/front-end/index.html
@@ -26,7 +26,7 @@
         <p id="subtitulo"><strong>Complete suas informações:</strong></p>
     </div>
 
-    <form name="new_form" action="javascript:createCandidate()">
+    <form name="new_form">
         <fieldset class="dadosP">
             <legend><strong>Seus dados pessoais</strong></legend><br>
             <div class="dadosP">
